# jaWikiSentenceReader

./: .gitignore  README.md  pyproject.toml
scripts/: build_dictionary_index.py
static/: app.js  index.html  styles.css
tests/: test_analyzer.py  test_translation_provider.py  test_wiki_api.py  test_wikidata_places.py
wiki_reader/: analyzer.py  app.py  phrase_matcher.py  token_utils.py  translation_provider.py  wiki_api.py  wikidata_places.py  wikimedia_readings.py
