[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-sentence-reader"
version = "0.1.0"
description = "Sentence-by-sentence Japanese Wikipedia reader prototype."
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0",
  "fugashi>=1.3.0",
  "unidic-lite>=1.0.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["wiki_reader"]
